--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-calendar-events": "*",
     "react-native-gesture-handler": "~2.8.0",
     "@react-navigation/native-stack": "*",
-    "react-native-safe-area-context": "4.4.1"
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-autocomplete-input": "*"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
